services/gateway-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  namespace: familiar-faces
  annotations:
    kubernetes.io/ingress.class: traefik
    # For WebSocket (chat-service)
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: api.<VPS_IP>.sslip.io # TODO: VPS IP
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gateway-service
            port:
              number: 8080
